<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/circle_removebg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:0.5"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="TODO" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/emailLine2"
        app:layout_constraintStart_toStartOf="@+id/emailLine1"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/emailLine2"
        app:layout_constraintStart_toStartOf="@+id/emailLine1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/emailLine2"
        app:layout_constraintStart_toStartOf="@+id/emailLine1"
        app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_design"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/LoginEnd"
        app:layout_constraintStart_toStartOf="@+id/LoginStart"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LoginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LoginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintGuide_percent="0.7" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/account_circle"
        app:layout_constraintStart_toStartOf="@id/userLogoStart"
        app:layout_constraintEnd_toEndOf="@id/UserLogoEnd"
        app:layout_constraintTop_toTopOf="@+id/LoginEmail"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:src="@drawable/passwordicon"
        app:layout_constraintEnd_toEndOf="@+id/UserLogoEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/userLogoStart"
        app:layout_constraintTop_toTopOf="@+id/LoginPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/userLogoStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/UserLogoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintGuide_percent="0.85" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_email_id_or_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/emailLine2"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="@+id/emailLine1"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="@id/guideline4" />

    <TextView
        android:id="@+id/sign_Up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/don_t_have_a_account_signup"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/by_signing_in_you_accept_our_tearms_of_use_and_privacy_policy"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/sign_Up"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/showPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_show_password"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toStartOf="@+id/emailLine2"
        app:layout_constraintStart_toStartOf="@+id/LoginEnd"
        app:layout_constraintTop_toTopOf="@+id/LoginPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>